// Copyright (c) 2010 Peter Klauser

option java_package = "com.googlecode.protobuf.pro.duplex.test";
option java_outer_classname = "PingPong";

message Ping {
    required int32 processingTime = 1;
    required int32 pongDataLength = 2;
    required bytes pingData = 3;
}

message Pong {
    required bytes pongData = 1;
}

service PingPongService {
    rpc ping(Ping) returns (Pong);
    rpc fail(Ping) returns (Pong);
}

